tests/bad/variant.ml
type t = A | B

let a = A

type u = B

let b = B

let _ = a = b
